--- a/stories/yue/0052_星卑桂亞.html
+++ b/stories/yue/0052_星卑桂亞.html
@@ -49,28 +49,28 @@ Rukia Nantale<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
 
-<p>星卑桂亞嘅媽媽過身嘅時候，佢非常之傷心。星卑桂亞嘅爸爸盡咗全力照顧佢。過咗一排之後，佢哋就慢慢開心翻上嚟，習慣咗冇星卑桂亞媽媽嘅生活。每日朝頭早，佢哋坐埋一齊，傾住即將到來嘅一日。每日夜晚黑，佢哋一齊煮飯，然之後一齊洗碗，星卑桂亞嘅爸爸仲會幫佢做功課添。</p>
+<p>星卑桂亞嘅媽咪過身嘅時候，佢非常之傷心。星卑桂亞嘅爸爸盡咗全力照顧佢。過咗一排之後，佢哋就慢慢開心翻上嚟，習慣咗冇星卑桂亞媽咪嘅生活。每日朝早，佢哋坐埋一齊，傾住即將到來嘅一日。每日夜晚黑，佢哋一齊煮飯，然之後一齊洗碗，星卑桂亞嘅爸爸仲會幫佢做功課添。</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
 
-<p>有一日，星卑桂亞嘅爸爸晏啲先翻屋企。佢一入門口就叫道：“親愛嘅囡囡，你喺邊度呀？”星卑桂亞走出嚟迎接爸爸。但佢突然間停低咗，因為佢見到爸爸拖緊第二個女人隻手。爸爸笑住話：“阿女，嚟吖，我同你介紹一個好特別嘅人，佢叫做阿妮塔。”</p>
+<p>有一日，星卑桂亞嘅爸爸晏啲先翻到屋企。佢一入門口就叫道：“親愛嘅囡囡，你喺邊度呀？”星卑桂亞走出嚟迎接爸爸。但佢突然間停低咗，因為佢見到爸爸拖緊第二個女人隻手。爸爸笑住話：“阿女呀，嚟吖，我同你介紹一個好特別嘅人，佢叫做阿妮塔。”</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
 
-<p>阿妮塔同星卑桂亞打招呼話：“你好，星卑桂亞！你爸爸同我講咗好多有關你嘅嘢。”佢冇同星卑桂亞微笑，亦都冇拖佢隻手。星卑桂亞嘅爸爸好開心，佢高高興興噉樣同佢講，如果佢哋三個人住埋一齊，一定會好幸福嘅。爸爸同星卑桂亞就話：“囡囡呀，我希望你可以接受阿妮塔成為你嘅媽咪。”</p>
+<p>阿妮塔同星卑桂亞打咗招呼話：“你好，星卑桂亞！你爸爸同我講咗好多有關你嘅嘢。”佢冇同星卑桂亞微笑，亦都冇拖佢隻手。星卑桂亞嘅爸爸好開心，佢高高興興噉樣同佢講，如果佢哋三個人住埋一齊，一定會好幸福嘅。爸爸同星卑桂亞就話：“囡囡呀，我希望你可以接受阿妮塔成為你嘅媽咪。”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
 
-<p>星卑桂亞嘅生活變咗。佢每日朝早冇時間同爸爸坐喺一齊傾偈。阿妮塔叫星卑桂亞做好多家務，星卑桂亞每日夜晚黑都癐拉拉，根本就冇時間做功課。佢一食完晚飯就瞓覺咗。唯一可以安慰吓佢就係媽媽留俾佢嘅彩色毛氈。星卑桂亞嘅爸爸似乎冇意識到個女一啲都唔開心。</p>
+<p>星卑桂亞嘅生活變咗。佢每日朝早冇時間陪爸爸坐喺一齊傾偈。阿妮塔叫星卑桂亞做好多家務，星卑桂亞每日夜晚黑都癐拉拉，根本就冇時間做功課啦。佢一食完晚飯就瞓覺咗。唯一可以安慰吓佢就係媽咪留俾佢嘅彩色毛氈。星卑桂亞嘅爸爸似乎冇意識到個女一啲都唔開心。</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Rukia Nantale<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
 
-<p>星卑桂亞嘅生活變得更加慘嘞。如果星卑桂亞未做完家務，又或者佢講些少抱怨嘅說話，阿妮塔就會打佢。夜晚黑，阿妮塔多數都會食晒所有嘅餸菜，淨留低少少餸頭餸尾俾星卑桂亞食。每日夜晚黑，星卑桂亞都會喊住瞓著，佢只能緊緊抱住嗰條媽媽留低俾佢嘅毛氈。</p>
+<p>星卑桂亞嘅生活變得更加慘嘞。如果星卑桂亞未做完家務，又或者佢講些少抱怨嘅說話，阿妮塔就會打佢。夜晚黑，阿妮塔多數都會食晒所有嘅餸菜，淨留低少少餸頭餸尾俾星卑桂亞食。每日夜晚黑，星卑桂亞都會喊住瞓著，佢只能緊緊抱住嗰條媽咪留低俾佢嘅毛氈。</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Rukia Nantale<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
 
-<p>天黑咁滯，星卑桂亞搵到樖生住喺小溪一邊嘅樹。佢爬咗上樹，喺樹枝上面瞓低。佢一路唱歌，一路慢慢瞓著咗：“媽媽，媽媽，媽媽，你離開咗我，離開咗我再又唔翻嚟。爸爸再又唔愛我。媽媽，你幾時翻嚟，你離開咗我……”</p>
+<p>天黑咁滯，星卑桂亞搵到樖生住喺小溪一邊嘅樹。佢爬咗上樹，喺樹枝上面瞓低。佢一路唱歌，一路慢慢瞓著咗：“媽咪，媽咪，媽咪，你離開咗我，離開咗我再又唔翻嚟。爸爸再又唔愛我。媽咪，你幾時翻嚟，你離開咗我……”</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Rukia Nantale<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
 
-<p>星卑桂亞嘅姑姑帶住佢翻去自己屋企。佢俾星卑桂亞煮咗好好味嘅餸菜，又俾佢鋪咗張床，等佢搇住媽媽條毛氈瞓覺。嗰日夜晚黑，星卑桂亞又喊住瞓著咗。不過呢次係心安嘅眼水。佢知道佢姑姑會照顧佢。</p>
+<p>星卑桂亞嘅姑姑帶住佢翻去自己屋企。佢俾星卑桂亞煮咗好好味嘅餸菜，又俾佢鋪咗張床，等佢搇住媽咪條毛氈瞓覺。嗰日夜晚黑，星卑桂亞又喊住瞓著咗。不過呢次係心安嘅眼水。佢知道佢姑姑會照顧佢。</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
