--- a/stories/yue/0095_贊瑪好勁.html
+++ b/stories/yue/0095_贊瑪好勁.html
@@ -63,7 +63,7 @@ Michael Oguttu<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
 
-<p>媽媽就話：“你係我嘅晨星”。</p>
+<p>媽咪就話：“你係我嘅晨星”。</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Michael Oguttu<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
 
-<p>媽媽提醒我：“唔好唔記得咗刷牙。”我答佢話：“點可能，我唔會唔記得㗎！”</p>
+<p>媽咪提醒我：“唔好唔記得咗刷牙。”我答佢話：“點可能，我唔會唔記得㗎！”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
