--- a/stories/yue/0342_懲罰.html
+++ b/stories/yue/0342_懲罰.html
@@ -49,14 +49,14 @@ Adelheid Marie Bwire<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
 
-<p>有一日，媽媽買咗好多生果。</p>
+<p>有一日，媽咪買咗好多生果。</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
 
-<p>我哋都問吓佢：“幾時可以食生果呀？”媽媽就話：“我哋要等到今晚先食啦。”</p>
+<p>我哋都問吓佢：“幾時可以食生果呀？”媽咪就話：“我哋要等到今晚先食啦。”</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Adelheid Marie Bwire<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
 
-<p>媽媽好嬲拉希姆。</p>
+<p>媽咪好嬲拉希姆。</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Adelheid Marie Bwire<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
 
-<p>媽媽就警告話：“拉希姆，你好快就會後悔㗎啦。”</p>
+<p>媽咪就警告話：“拉希姆，你好快就會後悔㗎啦。”</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Adelheid Marie Bwire<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
 
-<p>媽媽預咗會發生呢啲噉嘅嘢。拉希姆正受到生果嘅懲罰！</p>
+<p>媽咪預咗會發生呢啲噉嘅嘢。拉希姆正受到生果嘅懲罰！</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
