--- a/stories/yue/0342_懲罰_slides.html
+++ b/stories/yue/0342_懲罰_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
-<p>有一日，媽媽買咗好多生果。</p>
+<p>有一日，媽咪買咗好多生果。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
-<p>我哋都問吓佢：“幾時可以食生果呀？”媽媽就話：“我哋要等到今晚先食啦。”</p>
+<p>我哋都問吓佢：“幾時可以食生果呀？”媽咪就話：“我哋要等到今晚先食啦。”</p>
 <center>
 <strong>2</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
-<p>媽媽好嬲拉希姆。</p>
+<p>媽咪好嬲拉希姆。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
-<p>媽媽就警告話：“拉希姆，你好快就會後悔㗎啦。”</p>
+<p>媽咪就警告話：“拉希姆，你好快就會後悔㗎啦。”</p>
 <center>
 <strong>8</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
-<p>媽媽預咗會發生呢啲噉嘅嘢。拉希姆正受到生果嘅懲罰！</p>
+<p>媽咪預咗會發生呢啲噉嘅嘢。拉希姆正受到生果嘅懲罰！</p>
 <center>
 <strong>11</strong>
 </center>
