--- a/stories/index.html
+++ b/stories/index.html
@@ -4024,6 +4024,12 @@
       <td><a name="tr0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0067</td>
+      <td><a href="/stories/tr/0067_yemek-pişirmek_slides.html" target="_blank">Yemek Pişirmek</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0110</td>
       <td><a href="/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi_slides.html" target="_blank">Bir Küçük Tohum: Wangari Maathai’nin Hikayesi</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4229,7 +4235,7 @@
       <td>0067</td>
       <td><a href="http://africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0067">ar</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#ko0067">ko</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#tl0067">tl</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#ar0067">ar</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#ko0067">ko</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
