--- a/stories/index.html
+++ b/stories/index.html
@@ -3223,6 +3223,12 @@
       <td><a name="ru0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0066</td>
+      <td><a href="/stories/ru/0066_нозибеле-и-три-волосина_slides.html" target="_blank">Нозибеле и три волосина</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ru0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0127</td>
       <td><a href="/stories/ru/0127_разные-игры_slides.html" target="_blank">Разные игры</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4229,7 +4235,7 @@
       <td>0066</td>
       <td><a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#ko0066">ko</a>, <a href="#pa0066">pa</a>, <a href="#tl0066">tl</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#ko0066">ko</a>, <a href="#pa0066">pa</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
