--- a/stories/index.html
+++ b/stories/index.html
@@ -3229,6 +3229,18 @@
       <td><a name="ru0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0067</td>
+      <td><a href="/stories/ru/0067_я-готовлю_slides.html" target="_blank">Я готовлю</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ru0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0087</td>
+      <td><a href="/stories/ru/0087_я-люблю-читать_slides.html" target="_blank">Я люблю читать!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ru0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0127</td>
       <td><a href="/stories/ru/0127_разные-игры_slides.html" target="_blank">Разные игры</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3988,6 +4000,12 @@
   </thead>
   <tbody>
     <tr>
+      <td>0001</td>
+      <td><a href="/stories/tr/0001_çok-uzun-bir-adam_slides.html" target="_blank">Çok Uzun Bir Adam</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0002</td>
       <td><a href="/stories/tr/0002_hayvanlara-bak_slides.html" target="_blank">Hayvanlara Bak</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4006,6 +4024,12 @@
       <td><a name="tr0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0006</td>
+      <td><a href="/stories/tr/0006_anansi-ve-bilgelik_slides.html" target="_blank">Anansi Ve Bilgelik</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0008</td>
       <td><a href="/stories/tr/0008_ne-yapıyorsun_slides.html" target="_blank">Ne Yapıyorsun?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4016,6 +4040,12 @@
       <td><a href="/stories/tr/0009_benim-kedim-nerede_slides.html" target="_blank">Benim Kedim Nerede?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0027</td>
+      <td><a href="/stories/tr/0027_karar_slides.html" target="_blank">Karar</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0030</td>
@@ -4121,7 +4151,7 @@
       <td>0001</td>
       <td><a href="http://africanstorybook.org/stories/very-tall-man">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#gu0001">gu</a>, <a href="#hi0001">hi</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#pa0001">pa</a>, <a href="#ru0001">ru</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
+      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#gu0001">gu</a>, <a href="#hi0001">hi</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#pa0001">pa</a>, <a href="#ru0001">ru</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#tr0001">tr</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
@@ -4145,7 +4175,7 @@
       <td>0006</td>
       <td><a href="http://africanstorybook.org/stories/anansi-and-wisdom">Anansi and Wisdom</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0006">ar</a>, <a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#fa0006">fa</a>, <a href="#ko0006">ko</a>, <a href="#no0006">no</a>, <a href="#pa0006">pa</a>, <a href="#ru0006">ru</a>, <a href="#tl0006">tl</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
+      <td><a href="#ar0006">ar</a>, <a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#fa0006">fa</a>, <a href="#ko0006">ko</a>, <a href="#no0006">no</a>, <a href="#pa0006">pa</a>, <a href="#ru0006">ru</a>, <a href="#tl0006">tl</a>, <a href="#tr0006">tr</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
     </tr>
     <tr>
       <td>0007</td>
@@ -4187,7 +4217,7 @@
       <td>0027</td>
       <td><a href="http://africanstorybook.org/stories/decision">Decision</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0027">ar</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#ko0027">ko</a>, <a href="#pa0027">pa</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
+      <td><a href="#ar0027">ar</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#ko0027">ko</a>, <a href="#pa0027">pa</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
     </tr>
     <tr>
       <td>0030</td>
@@ -4241,7 +4271,7 @@
       <td>0067</td>
       <td><a href="http://africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0067">ar</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#ko0067">ko</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#ar0067">ar</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#ko0067">ko</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
@@ -4283,7 +4313,7 @@
       <td>0087</td>
       <td><a href="http://africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0087">ar</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#ko0087">ko</a>, <a href="#no0087">no</a>, <a href="#pa0087">pa</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#ar0087">ar</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#ko0087">ko</a>, <a href="#no0087">no</a>, <a href="#pa0087">pa</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0089</td>
