--- a/stories/index.html
+++ b/stories/index.html
@@ -3235,6 +3235,12 @@
       <td><a name="ru0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0072</td>
+      <td><a href="/stories/ru/0072_месть-нгиди_slides.html" target="_blank">Месть Нгиди</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ru0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0087</td>
       <td><a href="/stories/ru/0087_я-люблю-читать_slides.html" target="_blank">Я люблю читать!</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4283,7 +4289,7 @@
       <td>0072</td>
       <td><a href="http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0072">ar</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#ko0072">ko</a>, <a href="#pa0072">pa</a>, <a href="#tl0072">tl</a>, <a href="#zh0072">zh</a></td>
+      <td><a href="#ar0072">ar</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#ko0072">ko</a>, <a href="#pa0072">pa</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#zh0072">zh</a></td>
     </tr>
     <tr>
       <td>0073</td>
