--- a/stories/index.html
+++ b/stories/index.html
@@ -3919,6 +3919,12 @@
       <td><a name="aeb0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0049</td>
+      <td><a href="/stories/aeb/0049_qaws-quzaħ_slides.html" target="_blank">Qaws Quzaħ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsa1hXTktaTHo0ME0"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="aeb0049"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0112</td>
       <td><a href="/stories/aeb/0112_bedni_slides.html" target="_blank">Bedni</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsa1hXTktaTHo0ME0"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4235,7 +4241,7 @@
       <td>0049</td>
       <td><a href="http://africanstorybook.org/stories/rainbow">The Rainbow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#es0049">es</a>, <a href="#fa0049">fa</a>, <a href="#gu0049">gu</a>, <a href="#or0049">or</a>, <a href="#yue0049">yue</a>, <a href="#zh0049">zh</a></td>
+      <td><a href="#aeb0049">aeb</a>, <a href="#es0049">es</a>, <a href="#fa0049">fa</a>, <a href="#gu0049">gu</a>, <a href="#or0049">or</a>, <a href="#yue0049">yue</a>, <a href="#zh0049">zh</a></td>
     </tr>
     <tr>
       <td>0050</td>
